--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ add_executable(main main.cpp)
 add_library(Geometry Vertex.cpp Edge.cpp)
 
 include_directories(${JSON_PARSER}/include)
-link_directories(/${JSON_PARSER}/build/debug/lib)
+link_directories(${JSON_PARSER}/build/debug/lib)
 
 target_link_libraries(main PUBLIC Geometry PRIVATE ${JSON_PARSER}/build/debug/lib/libjsoncpp.a)
